# ocaml-exercises

./: README.md  dune-project  exercises.opam
lib/: compress.ml  decode_rle.ml  decode_rle.mli  drop_nth_element_of_list.ml  drop_nth_element_of_list.mli  duplicate_elements_of_list.ml  duplicate_elements_of_list.mli  flatten_list.ml  flatten_list.mli  last_two_elements_of_list.ml  last_two_elements_of_list.mli  length_of_list.ml  modified_rle.ml  modified_rle.mli  nth_element_of_list.ml  nth_element_of_list.mli  pack_consecutive_duplicates.ml  pack_consecutive_duplicates.mli  palindrome.ml  palindrome.mli  remove_kth_element_of_list.ml  remove_kth_element_of_list.mli  replicate_elements_of_list_n_times.ml  replicate_elements_of_list_n_times.mli  reverse_list.ml  reverse_list.mli  rotate.ml  rotate.mli  run_length_encoding.ml  run_length_encoding.mli  slice.ml  slice.mli  split.ml  split.mli  tail_of_list.ml  tail_of_list.mli
test/: dune  test_at.ml  test_compress.ml  test_decode_rle.ml  test_drop_nth_element_of_list.ml  test_duplicate_elements_of_list.ml  test_exercises.ml  test_flatten.ml  test_last.ml  test_last_two.ml  test_length.ml  test_modified_rle.ml  test_pack.ml  test_palindrome.ml  test_remove_kth_element_of_list.ml  test_replicate_elements_of_list_n_times.ml  test_reverse.ml  test_rotate.ml  test_run_length.ml  test_slice.ml  test_split.ml
